// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/Stories empty 1`] = `
.emotion-1 {
  position: relative;
}

.emotion-3 {
  padding-top: 20px;
}

.emotion-2 {
  color: inherit;
  list-style: none;
  margin: 0;
  padding: 5px;
  font-family: inherit;
  font-size: 15px;
  min-width: 200px;
  margin-left: -19px;
}

.emotion-0 {
  padding-left: 19px;
  list-style: none;
}

<div
  class="emotion-3 emotion-4"
>
  <ul
    class="emotion-2"
  >
    <li
      class="emotion-1"
    >
      <div>
        <ul
          class="emotion-0"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories simple 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-20 {
  padding-top: 20px;
}

.emotion-19 {
  color: inherit;
  list-style: none;
  margin: 0;
  padding: 5px;
  font-family: inherit;
  font-size: 15px;
  min-width: 200px;
  margin-left: -19px;
}

.emotion-15 {
  padding-left: 19px;
  list-style: none;
}

.emotion-1 {
  display: inline-block;
  vertical-align: top;
  max-width: calc(100% - 24px);
}

.emotion-0 {
  line-height: 18px;
  padding: 1px 0 5px;
}

.emotion-12 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
  color: inherit;
  font-weight: bold;
  background-color: rgba(0,0,0,0.07);
  z-index: 0;
}

.emotion-7 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
}

<div
  class="emotion-20 emotion-21"
>
  <ul
    class="emotion-19"
  >
    <li
      class="emotion-2"
    >
      <div>
        <ul
          class="emotion-15"
        >
          <li
            class="emotion-2"
          >
            <div
              data-name="a"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    a
                  </div>
                </div>
              </div>
            </div>
            <div />
          </li>
          <li
            class="emotion-2"
          >
            <div
              data-name="b"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    b
                  </div>
                </div>
              </div>
            </div>
            <div>
              <ul
                class="emotion-15"
              >
                <li
                  class="emotion-2"
                >
                  <a
                    class="emotion-7 emotion-8"
                    href="?selectedKind=b&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="emotion-1"
                      >
                        <div
                          class="emotion-5"
                        >
                          b1
                        </div>
                      </div>
                    </div>
                  </a>
                  <div />
                </li>
                <li
                  class="emotion-2"
                >
                  <a
                    class="emotion-12 emotion-8"
                    href="?selectedKind=b&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="emotion-1"
                      >
                        <div
                          class="emotion-5"
                        >
                          b2
                        </div>
                      </div>
                    </div>
                  </a>
                  <div />
                </li>
              </ul>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories with hierarchy - hierarchySeparator is defined 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-28 {
  padding-top: 20px;
}

.emotion-27 {
  color: inherit;
  list-style: none;
  margin: 0;
  padding: 5px;
  font-family: inherit;
  font-size: 15px;
  min-width: 200px;
  margin-left: -19px;
}

.emotion-19 {
  padding-left: 19px;
  list-style: none;
}

.emotion-1 {
  display: inline-block;
  vertical-align: top;
  max-width: calc(100% - 24px);
}

.emotion-0 {
  line-height: 18px;
  padding: 1px 0 5px;
}

.emotion-16 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
  color: inherit;
  font-weight: bold;
  background-color: rgba(0,0,0,0.07);
  z-index: 0;
}

.emotion-11 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
}

<div
  class="emotion-28 emotion-29"
>
  <ul
    class="emotion-27"
  >
    <li
      class="emotion-2"
    >
      <div>
        <ul
          class="emotion-19"
        >
          <li
            class="emotion-2"
          >
            <div
              data-name="some"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    some
                  </div>
                </div>
              </div>
            </div>
            <div />
          </li>
          <li
            class="emotion-2"
          >
            <div
              data-name="another"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    another
                  </div>
                </div>
              </div>
            </div>
            <div>
              <ul
                class="emotion-19"
              >
                <li
                  class="emotion-2"
                >
                  <div
                    data-name="space"
                    role="menuitem"
                    style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                    tabindex="0"
                  >
                    <div>
                      <div
                        style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                      >
                        <div
                          style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                        >
                          <svg
                            fill="currentColor"
                            height="10"
                            preserveAspectRatio="xMidYMid meet"
                            style="vertical-align:top;fill:currentColor"
                            viewBox="0 0 40 40"
                            width="10"
                          >
                            <g>
                              <path
                                d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="emotion-1"
                      >
                        <div
                          class="emotion-0"
                        >
                          space
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <ul
                      class="emotion-19"
                    >
                      <li
                        class="emotion-2"
                      >
                        <div
                          data-name="20"
                          role="menuitem"
                          style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                          tabindex="0"
                        >
                          <div>
                            <div
                              style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                            >
                              <div
                                style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                              >
                                <svg
                                  fill="currentColor"
                                  height="10"
                                  preserveAspectRatio="xMidYMid meet"
                                  style="vertical-align:top;fill:currentColor"
                                  viewBox="0 0 40 40"
                                  width="10"
                                >
                                  <g>
                                    <path
                                      d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                            <div
                              class="emotion-1"
                            >
                              <div
                                class="emotion-0"
                              >
                                20
                              </div>
                            </div>
                          </div>
                        </div>
                        <div>
                          <ul
                            class="emotion-19"
                          >
                            <li
                              class="emotion-2"
                            >
                              <a
                                class="emotion-11 emotion-12"
                                href="?selectedKind=another.space.20&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="emotion-1"
                                  >
                                    <div
                                      class="emotion-9"
                                    >
                                      b1
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <div />
                            </li>
                            <li
                              class="emotion-2"
                            >
                              <a
                                class="emotion-16 emotion-12"
                                href="?selectedKind=another.space.20&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="emotion-1"
                                  >
                                    <div
                                      class="emotion-9"
                                    >
                                      b2
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <div />
                            </li>
                          </ul>
                        </div>
                      </li>
                    </ul>
                  </div>
                </li>
              </ul>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories with highlighting when storiesFilter is provided 1`] = `
.emotion-10 {
  position: relative;
}

.emotion-25 {
  padding-top: 20px;
}

.emotion-24 {
  color: inherit;
  list-style: none;
  margin: 0;
  padding: 5px;
  font-family: inherit;
  font-size: 15px;
  min-width: 200px;
  margin-left: -19px;
}

.emotion-16 {
  padding-left: 19px;
  list-style: none;
}

.emotion-1 {
  display: inline-block;
  vertical-align: top;
  max-width: calc(100% - 24px);
}

.emotion-0 {
  line-height: 18px;
  padding: 1px 0 5px;
}

.emotion-13 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
  color: inherit;
  font-weight: bold;
  background-color: rgba(0,0,0,0.07);
  z-index: 0;
}

.emotion-8 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
}

<div
  class="emotion-25 emotion-26"
>
  <ul
    class="emotion-24"
  >
    <li
      class="emotion-10"
    >
      <div>
        <ul
          class="emotion-16"
        >
          <li
            class="emotion-10"
          >
            <div
              data-name="another"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    <span>
                      ano
                    </span>
                    <strong
                      style="background-color:#FFFEAA;font-weight:inherit;background:#9fdaff;color:black"
                    >
                      th
                    </strong>
                    <span>
                      er
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <ul
                class="emotion-16"
              >
                <li
                  class="emotion-10"
                >
                  <div
                    data-name="space"
                    role="menuitem"
                    style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                    tabindex="0"
                  >
                    <div>
                      <div
                        style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                      >
                        <div
                          style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                        >
                          <svg
                            fill="currentColor"
                            height="10"
                            preserveAspectRatio="xMidYMid meet"
                            style="vertical-align:top;fill:currentColor"
                            viewBox="0 0 40 40"
                            width="10"
                          >
                            <g>
                              <path
                                d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="emotion-1"
                      >
                        <div
                          class="emotion-0"
                        >
                          space
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <ul
                      class="emotion-16"
                    >
                      <li
                        class="emotion-10"
                      >
                        <div
                          data-name="20"
                          role="menuitem"
                          style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                          tabindex="0"
                        >
                          <div>
                            <div
                              style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                            >
                              <div
                                style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                              >
                                <svg
                                  fill="currentColor"
                                  height="10"
                                  preserveAspectRatio="xMidYMid meet"
                                  style="vertical-align:top;fill:currentColor"
                                  viewBox="0 0 40 40"
                                  width="10"
                                >
                                  <g>
                                    <path
                                      d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                            <div
                              class="emotion-1"
                            >
                              <div
                                class="emotion-0"
                              >
                                20
                              </div>
                            </div>
                          </div>
                        </div>
                        <div>
                          <ul
                            class="emotion-16"
                          >
                            <li
                              class="emotion-10"
                            >
                              <a
                                class="emotion-8 emotion-9"
                                href="?selectedKind=another.space.20&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="emotion-1"
                                  >
                                    <div
                                      class="emotion-6"
                                    >
                                      b1
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <div />
                            </li>
                            <li
                              class="emotion-10"
                            >
                              <a
                                class="emotion-13 emotion-9"
                                href="?selectedKind=another.space.20&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="emotion-1"
                                  >
                                    <div
                                      class="emotion-6"
                                    >
                                      b2
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <div />
                            </li>
                          </ul>
                        </div>
                      </li>
                    </ul>
                  </div>
                </li>
              </ul>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories without hierarchy - hierarchySeparator is defined 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-20 {
  padding-top: 20px;
}

.emotion-19 {
  color: inherit;
  list-style: none;
  margin: 0;
  padding: 5px;
  font-family: inherit;
  font-size: 15px;
  min-width: 200px;
  margin-left: -19px;
}

.emotion-15 {
  padding-left: 19px;
  list-style: none;
}

.emotion-1 {
  display: inline-block;
  vertical-align: top;
  max-width: calc(100% - 24px);
}

.emotion-0 {
  line-height: 18px;
  padding: 1px 0 5px;
}

.emotion-12 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
  color: inherit;
  font-weight: bold;
  background-color: rgba(0,0,0,0.07);
  z-index: 0;
}

.emotion-7 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
}

<div
  class="emotion-20 emotion-21"
>
  <ul
    class="emotion-19"
  >
    <li
      class="emotion-2"
    >
      <div>
        <ul
          class="emotion-15"
        >
          <li
            class="emotion-2"
          >
            <div
              data-name="some.name.item1"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    some.name.item1
                  </div>
                </div>
              </div>
            </div>
            <div />
          </li>
          <li
            class="emotion-2"
          >
            <div
              data-name="another.space.20"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentColor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-0"
                  >
                    another.space.20
                  </div>
                </div>
              </div>
            </div>
            <div>
              <ul
                class="emotion-15"
              >
                <li
                  class="emotion-2"
                >
                  <a
                    class="emotion-7 emotion-8"
                    href="?selectedKind=another.space.20&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="emotion-1"
                      >
                        <div
                          class="emotion-5"
                        >
                          b1
                        </div>
                      </div>
                    </div>
                  </a>
                  <div />
                </li>
                <li
                  class="emotion-2"
                >
                  <a
                    class="emotion-12 emotion-8"
                    href="?selectedKind=another.space.20&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="emotion-1"
                      >
                        <div
                          class="emotion-5"
                        >
                          b2
                        </div>
                      </div>
                    </div>
                  </a>
                  <div />
                </li>
              </ul>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;
